<resources>
    <!--<string name="blowfish_cipher_key" translatable="false">YOUR_BLOWFISH_KEY_HERE</string>-->
    <string name="blowfish_cipher_key" translatable="false">546A576E5A7234753778214125432A462D4A614E645267556B58703273357638</string>
    <string name="app_key" translatable="false">YOUR_APP_KEY_HERE</string>
    <string name="accesstoken" translatable="false">YOUR_GENERATED_ACCESS_TOKEN_HERE</string>

    <string name="text_start_https" translatable="false">https://</string>
    <string name="password_hint">Password &#8230;</string>
    <string name="loading">Loading &#8230;</string>
    <string name="app_name">Secure Storage</string>
    <string name="action_settings">Settings</string>
	  <string name="login">Login</string>
    <string name="token">Password: </string>
    <string name="token_confirm">Confirm password: </string>
    <string name="forgot">Forgot password</string>
    <string name="forgot_warning">Warning: this operation goes remove all stored information.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="text_copied">The text is copied to the clipboard</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="create">Create</string>
    <string name="search_hint">Search &#8230;</string>
    <string name="fingerprint">Authentication</string>
    <string name="fingerprint_authentication_failed">The authentication fail.</string>
    <string name="fingerprint_authentication_help">Authentication help.</string>
    <string name="fingerprint_authentication_error">Authentication error.</string>
    <string name="fingerprint_instructions">Place your finger on the fingerprint sensor to sign in.</string>
    <string name="on_double_back_exit_text">Press once again to exit.</string>
    <string name="on_double_back_logout_text">Press once again to logout.</string>
	  <string name="exception">Exception</string>
    <string name="error">Error</string>
    <string name="error_db_update">Unable to update the database</string>
    <string name="error_invalid_token_value">Invalid password.</string>
    <string name="error_token_not_match">The passwords do not match.</string>
    <string name="confirm_erase_config">Are you sure you want to erase the config?</string>
    <string name="error_unable_to_remove_name">Unable to remove the name.</string>
    <string name="error_unable_to_update_priv_cfg">Unable to update private config.</string>
    <string name="error_unable_to_store_empty_name">Unable to store an empty name.</string>
    <string name="error_unable_to_store_empty_value">Unable to store an empty value.</string>
    <string name="error_unable_to_store_new_value">Unable to store the new name-value.</string>
    <string name="error_invalid_email">Invalid email entry.</string>
    <string name="error_invalid_url">Invalid URL entry.</string>
    <string name="permissions">The application requires permissions.</string>
    <string name="already_inserted">Entry already present.</string>
    <string name="new_data_title">New entry</string>
    <string name="update_data_title">Update entry</string>
    <string name="confirm_delete_name_title">Confirm delete</string>
    <string name="confirm_delete_name_message">This action also causes the deletion of the associated elements.</string>
    <string name="new_entry_title">New entry</string>
    <string name="new_entry_hint_key">Name</string>
    <string name="new_entry_hint_value">Value</string>
    <string name="view">Show entries when opening</string>
    <string name="unview">Hide entries when opening</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="url">URL</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="text">Text</string>
    <string name="type">Type</string>
    <string name="compose">Number</string>
    <string name="pref_cat_title_security">Security</string>
    <string name="pref_title_security_parano">Paranoiac</string>
    <string name="pref_summary_security_parano">This mode locks the application when it\'s in the background or the screen is turned off.</string>
    <string name="pref_cat_title_import_export">Import/Export</string>
    <string name="pref_title_export">Export</string>
    <string name="pref_title_dropbox">Dropbox</string>
    <string name="pref_title_import">Import</string>
    <string name="pref_summary_import_from_device">Import the database from the device.</string>
    <string name="pref_summary_export_to_device">Export the database to the device.</string>
    <string name="pref_summary_export_to_dropbox">Export the database to dropbox.</string>
    <string name="pref_summary_import_from_dropbox">Import the database from dropbox.</string>
    <string name="use_folder">Use this folder</string>
    <string name="use_file">Use this file</string>
    <string name="chooser_long_press_message">Long press to select.</string>
    <string name="chooser_parent_directory">Parent Directory</string>
    <string name="chooser_folder">Folder</string>
    <string name="chooser_file_size">File size</string>
    <string name="export_success">Export success</string>
    <string name="import_success">Import success</string>
    <string name="box_select_db_file">Select</string>
    <string name="error_no_files">No file found !</string>
    <string name="pref_title_device">Device</string>
    <string name="restart_from_db_update_vn">Database updated to version</string>
    <string name="data_transfer">Data transfers, please wait&#8230;</string>
    <string name="error_dropbox_upload">Unable to upload the file</string>
    <string name="error_dropbox_download">Unable to download the file</string>
    <string name="error_dropbox_list_directory">Unable to get the files list</string>
</resources>
