<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".ui.activities.login.LoginActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <Button
      android:id="@+id/loginBT"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30sp"
      android:onClick="actionLogin"
      android:text="@string/login" />

    <Button
      android:id="@+id/linkToForgotBT"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50sp"
      android:gravity="center"
      android:onClick="actionForgot"
      android:text="@string/forgot" />

    <ImageView
      android:id="@+id/fingerprintIV"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:contentDescription="@null"
      app:srcCompat="@mipmap/ic_fingerprint_white_48dp" />

    <TextView
      android:id="@+id/fingerprintTVDisplay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="27dp"
      android:text="@string/fingerprint_instructions" />

    <TextView
      android:id="@+id/fingerprintTV"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/app_name"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/tokenTV"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/token"
      android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
      android:id="@+id/tokenLayoutET"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/textColor">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/tokenET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
