<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".ui.activities.login.InitActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <Button
      android:id="@+id/createBT"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30sp"
      android:onClick="actionCreate"
      android:text="@string/create" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20sp"
      android:text="@string/token_confirm"
      android:textSize="18sp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/token"
      android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/textColor">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/tokenConfirmET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/textColor">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/tokenET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
